checking a fix for overflow.

--- a/public/css/index_style.css
+++ b/public/css/index_style.css
@@ -12,6 +12,7 @@ html {
       rgba(0, 0, 0, 0.5) 100%
     );
   background-blend-mode: screen;
+  overflow-x: hidden;
 }
 
 #body {
